--- a/Xpplg2_Dimitarbayanaka_2.html
+++ b/Xpplg2_Dimitarbayanaka_2.html
@@ -18,7 +18,8 @@
         <span style="color: red;"> has</span> an edge on the <span style="color: red;">Moto X</span>, <i>but the X's Active Display</i> is a boon for notifications. As these things
         tend to go, a lot of it boils down to ecosystem preference. The iPhone 5c is being built for the
         same audience as the <a href="https://www.engadget.com/2010-09-07-ipod-nano-review-2010.html">flashy iPod nano</a>, and moreover, Apple built it for those on <u>Wall Street</u>
-        who feel that it simply <i>must</i> attract new markets to stay atop its game.</p>
+        who feel that it simply <i>must</i> attract new markets to stay atop its game.
+    </p>
         <b><hr></b>
     <p>Apple never showed intentions of racing the <b><u>Nexus 7 </u></b>to the bottom in the tablet game, and the
        <b><i>iPhone 5c</i></b> is proof that it won't do that in the phone arena, either.
