--- a/lesson2/2a.html
+++ b/lesson2/2a.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>uber</title>
-  <link rel="stylesheet" href="style 1a.css">
+  <link rel="stylesheet" href="2a.css">
 </head>
 <body>
   <button id="uber"> Request now</button>
